--- a/main.html
+++ b/main.html
@@ -26,8 +26,8 @@
                 <nav>
                     <ul>
                         <li><a href="about.html">About us</a></li>
-                        <li><a href="index.html#best-sellers-section">Best Sellers</a></li>
-                        <li><a href="index.html#newsletter-section">Newsletter</a></li>
+                        <li><a href="index.html#best-sellers-section">Services</a></li>
+                        <li><a href="index.html#newsletter-section">Contact</a></li>
                         <li class="menu-icon"><img src="img/menu_icon.png" alt="menu icon"></li>
                     </ul>
                 </nav>
