--- a/main.html
+++ b/main.html
@@ -61,31 +61,27 @@
             </div>
         </section>
 
-        <section class="best-sellers" id="best-sellers-section">
-            <h2>Best Sellers</h2>
+        <section class="legal-services" id="legal-services-section">
+            <h2>Services</h2>
             <hr />
-            <div class="product-slider">
+            <div class="services-slider">
                 <div class="container">
-                    <div class="product new">
-                        <div class="product-picture">
+                    <div class="service">
+                        <div class="service-info">
+                            <h2 class="title">BAIL</h2>
+                        </div>
+                        <div class="service-picture">
                             <img
-                                src="img/Watch_case.jpg"
+                                src="img/bail.png"
                                 alt="product: Penom Case for Apple Watch"
                             />
                         </div>
-                        <div class="product-info">
-                            <h5 class="categories">
-                                Smart Watches, Cases, Apple
-                            </h5>
-                            <h4 class="title">Penom Case for Apple Watch</h4>
-                            <h3 class="price">
-                                <span>US$ 6.99</span>
-                            </h3>
-                            <button>Add to bag</button>
-                        </div>
+                        <p class="price">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec nisl consectetur, tempus ex sed, lacinia tellus.
+                        </p>
                     </div>
 
-                    <div class="product new">
+                    <div class="product">
                         <div class="product-picture">
                             <img
                                 src="img/Headphone.jpg"
@@ -119,6 +115,45 @@
                             <h3 class="price">
                                 <span class="discounted-price">US$ 396.89</span>
                                 <span class="original-price">US$ 429.99</span>
+                            </h3>
+                            <button>Add to bag</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="services-slider">
+                <div class="container">
+                    <div class="product">
+                        <div class="product-picture">
+                            <img
+                                src="img/Watch_case.jpg"
+                                alt="product: Penom Case for Apple Watch"
+                            />
+                        </div>
+                        <div class="product-info">
+                            <h5 class="categories">
+                                Smart Watches, Cases, Apple
+                            </h5>
+                            <h4 class="title">Penom Case for Apple Watch</h4>
+                            <h3 class="price">
+                                <span>US$ 6.99</span>
+                            </h3>
+                            <button>Add to bag</button>
+                        </div>
+                    </div>
+
+                    <div class="product">
+                        <div class="product-picture">
+                            <img
+                                src="img/Headphone.jpg"
+                                alt="product: Noise Cancelling Headphone"
+                            />
+                        </div>
+                        <div class="product-info">
+                            <h5 class="categories">Headphones, Audio, Sound</h5>
+                            <h4 class="title">Noise Cancelling Headphone</h4>
+                            <h3 class="price">
+                                <span>US$ 18.49</span>
                             </h3>
                             <button>Add to bag</button>
                         </div>
