--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <nav>
                     <ul>
                         <li><a href="about.html">About us</a></li>
-                        <li><a href="index.html#best-sellers-section">Services</a></li>
+                        <li><a href="index.html#legal-services-section">Services</a></li>
                         <li><a href="index.html#newsletter-section">Contact</a></li>
                         <li class="menu-icon"><img src="img/menu_icon.png" alt="menu icon"></li>
                     </ul>
@@ -39,8 +39,12 @@
                 <source media="(max-width: 576px)" srcset="img/law_office.jpg"> 
                 <source media="(max-width: 960px)" srcset="img/law_office.jpg"> 
                 <source media="(max-width: 1440px)" srcset="img/law_office.jpg"> 
-                <img src="img/law_office.jpg" alt="law office - building" />
             </picture>
+            <div id="slider">
+                <img class="selected" src="img/law_office.jpg" alt="Picture of the law firm building" >
+                <img src="img/entrace.jpg" alt="Picture of the law firm waiting room">
+                <img src="img/meeting-room.jpg">
+            </div>
 
             <div class="hero-content">
                 <div class="container">
@@ -56,7 +60,7 @@
                     <p>
 
                     </p>
-                    <button>See all services</button>
+                    <button onclick="window.location.href='index.html#legal-services-section'">See all services</button>
                 </div>
             </div>
         </section>
@@ -67,95 +71,81 @@
             <div class="services-slider">
                 <div class="container">
                     <div class="service">
-                        <div class="service-info">
-                            <h2 class="title">BAIL</h2>
-                        </div>
                         <div class="service-picture">
                             <img
                                 src="img/bail.png"
-                                alt="product: Penom Case for Apple Watch"
+                                alt="Icon of handcuffs"
                             />
+                            <!-- https://iconscout.com/icon/arrest-crime-handcuffs-fetter-police-law-breaking-8 --> 
                         </div>
-                        <p class="price">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec nisl consectetur, tempus ex sed, lacinia tellus.
-                        </p>
-                    </div>
-
-                    <div class="product">
-                        <div class="product-picture">
-                            <img
-                                src="img/Headphone.jpg"
-                                alt="product: Noise Cancelling Headphone"
-                            />
-                        </div>
-                        <div class="product-info">
-                            <h5 class="categories">Headphones, Audio, Sound</h5>
-                            <h4 class="title">Noise Cancelling Headphone</h4>
-                            <h3 class="price">
-                                <span>US$ 18.49</span>
-                            </h3>
-                            <button>Add to bag</button>
+                        <div class="service-info">
+                            <h2 class="title">Bail</h2>
+                            <p class="info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec nisl consectetur, tempus ex sed, lacinia tellus.
+                            </p>
                         </div>
                     </div>
 
-                    <div class="product">
-                        <div class="product-picture">
+                    <div class="service">
+                        <div class="service-picture">
                             <img
-                                src="img/Camera.jpg"
-                                alt="product: Canon Digital SLR EOS Rebel T6"
+                                src="img/immigration.png"
+                                alt="Icon of a document"
                             />
                         </div>
-                        <div class="product-info">
-                            <h5 class="categories">
-                                Cameras, Kits, Photo & Video
-                            </h5>
-                            <h4 class="title">
-                                Canon Digital SLR EOS Rebel T6
-                            </h4>
-                            <h3 class="price">
-                                <span class="discounted-price">US$ 396.89</span>
-                                <span class="original-price">US$ 429.99</span>
-                            </h3>
-                            <button>Add to bag</button>
+                        <div class="service-info">
+                            <h2 class="title">Immigration</h2>
+                            <p class="info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec nisl consectetur, tempus ex sed, lacinia tellus.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="service">
+                        <div class="service-picture">
+                            <img
+                                src="img/insurance.png"
+                                alt="Icon of a shield"
+                            />
+                        </div>
+                        <div class="service-info">
+                            <h2 class="title-long">Insurance</h2>
+                            <p class="info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec nisl consectetur, tempus ex sed, lacinia tellus.
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="services-slider">
                 <div class="container">
-                    <div class="product">
-                        <div class="product-picture">
+                    <div class="service">
+                        <div class="service-picture">
                             <img
-                                src="img/Watch_case.jpg"
-                                alt="product: Penom Case for Apple Watch"
+                                src="img/partnership.png"
+                                alt="Icon of two hands shaking in agreement"
                             />
                         </div>
-                        <div class="product-info">
-                            <h5 class="categories">
-                                Smart Watches, Cases, Apple
-                            </h5>
-                            <h4 class="title">Penom Case for Apple Watch</h4>
-                            <h3 class="price">
-                                <span>US$ 6.99</span>
-                            </h3>
-                            <button>Add to bag</button>
+                        <div class="service-info">
+                            <h2 class="title-long">Mergers and Acquisitions</h2>
+                            <p class="info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec nisl consectetur, tempus ex sed, lacinia tellus.
+                            </p>
                         </div>
                     </div>
 
-                    <div class="product">
-                        <div class="product-picture">
+                    <div class="service">
+                        <div class="service-picture">
                             <img
-                                src="img/Headphone.jpg"
-                                alt="product: Noise Cancelling Headphone"
+                                src="img/intellectual.png"
+                                alt="Icon of two hands shaking in agreement"
                             />
                         </div>
-                        <div class="product-info">
-                            <h5 class="categories">Headphones, Audio, Sound</h5>
-                            <h4 class="title">Noise Cancelling Headphone</h4>
-                            <h3 class="price">
-                                <span>US$ 18.49</span>
-                            </h3>
-                            <button>Add to bag</button>
+                        <div class="service-info">
+                            <h2 class="title-long">Intellectual Property</h2>
+                            <p class="info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec nisl consectetur, tempus ex sed, lacinia tellus.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -210,5 +200,6 @@
             </div>
             <div class="copyright-text">2020 &copy; All Rights Reserved</div>
         </footer>
+        <script src="scripts.js"></script>
     </body>
 </html>
