About Us Creation

--- a/about_us.html
+++ b/about_us.html
@@ -65,88 +65,50 @@
             </div>
         </section>
 
-        <section class="legal-services" id="legal-services-section">
-            <h2>Services</h2>
+        <section class="about-us" id="about-us-section">
+            <h2>About Us</h2>
             <hr />
-            <div class="services-slider">
+            <div class="about-us-part">
                 <div class="container">
-                    <div class="service">
-                        <div class="service-picture">
-                            <img
-                                src="img/bail.png"
-                                alt="Icon of handcuffs"
-                            />
-                            <!-- https://iconscout.com/icon/arrest-crime-handcuffs-fetter-police-law-breaking-8 --> 
-                        </div>
-                        <div class="service-info">
-                            <h2 class="title">Bail</h2>
-                            <p class="info">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec nisl consectetur, tempus ex sed, lacinia tellus.
-                            </p>
-                        </div>
+                    <div class="first-office-img">
+                        <img
+                            src="img/about_us_first.jpg"
+                            alt="Picture of the Toronto's city"
+                        />
                     </div>
-
-                    <div class="service">
-                        <div class="service-picture">
-                            <img
-                                src="img/immigration.png"
-                                alt="Icon of a document"
-                            />
-                        </div>
-                        <div class="service-info">
-                            <h2 class="title">Immigration</h2>
-                            <p class="info">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec nisl consectetur, tempus ex sed, lacinia tellus.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="service">
-                        <div class="service-picture">
-                            <img
-                                src="img/insurance.png"
-                                alt="Icon of a shield"
-                            />
-                        </div>
-                        <div class="service-info">
-                            <h2 class="title-long">Insurance</h2>
-                            <p class="info">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec nisl consectetur, tempus ex sed, lacinia tellus.
-                            </p>
-                        </div>
+                    <div class="first-office-info">
+                        <h2 class="title">First Office</h2>
+                        <p class="info">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer hendrerit tellus in felis mollis, ut malesuada nisl sodales. Aenean ultrices neque sit amet risus venenatis, ac eleifend enim suscipit. Nulla eleifend sem vitae pulvinar commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec mattis aliquam libero quis congue. Mauris efficitur magna vel vulputate commodo. Aenean lacinia magna eros, pharetra viverra turpis blandit eu. Maecenas eu nibh turpis. Mauris scelerisque condimentum lacinia. Nullam placerat tortor velit, eu suscipit sem rhoncus eu. Sed sodales malesuada pellentesque. Maecenas a sem eget eros sollicitudin pharetra id sit amet orci. Aenean non lacus mauris.
+                        </p>
                     </div>
                 </div>
-            </div>
-            <div class="services-slider">
                 <div class="container">
-                    <div class="service">
-                        <div class="service-picture">
-                            <img
-                                src="img/partnership.png"
-                                alt="Icon of two hands shaking in agreement"
-                            />
-                        </div>
-                        <div class="service-info">
-                            <h2 class="title-long">Mergers and Acquisitions</h2>
-                            <p class="info">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec nisl consectetur, tempus ex sed, lacinia tellus.
-                            </p>
-                        </div>
+                    <div class="montreal-info">
+                        <h2 class="title">Montreal</h2>
+                        <p class="info">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer hendrerit tellus in felis mollis, ut malesuada nisl sodales. Aenean ultrices neque sit amet risus venenatis, ac eleifend enim suscipit. Nulla eleifend sem vitae pulvinar commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec mattis aliquam libero quis congue. Mauris efficitur magna vel vulputate commodo. Aenean lacinia magna eros, pharetra viverra turpis blandit eu. Maecenas eu nibh turpis. Mauris scelerisque condimentum lacinia. Nullam placerat tortor velit, eu suscipit sem rhoncus eu. Sed sodales malesuada pellentesque. Maecenas a sem eget eros sollicitudin pharetra id sit amet orci. Aenean non lacus mauris.
+                        </p>
                     </div>
-
-                    <div class="service">
-                        <div class="service-picture">
-                            <img
-                                src="img/intellectual.png"
-                                alt="Icon of two hands shaking in agreement"
-                            />
-                        </div>
-                        <div class="service-info">
-                            <h2 class="title-long">Intellectual Property</h2>
-                            <p class="info">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec nisl consectetur, tempus ex sed, lacinia tellus.
-                            </p>
-                        </div>
+                    <div class="montreal-img">
+                        <img
+                            src="img/about_us_montreal.jpg"
+                            alt="Picture of the Montreal's city"
+                        />
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="first-office-img">
+                        <img
+                            src="img/about_us_awards.jpg"
+                            alt="Picture of the Toronto's city"
+                        />
+                    </div>
+                    <div class="first-office-info">
+                        <h2 class="title">Awards</h2>
+                        <p class="info">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer hendrerit tellus in felis mollis, ut malesuada nisl sodales. Aenean ultrices neque sit amet risus venenatis, ac eleifend enim suscipit. Nulla eleifend sem vitae pulvinar commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec mattis aliquam libero quis congue. Mauris efficitur magna vel vulputate commodo. Aenean lacinia magna eros, pharetra viverra turpis blandit eu. Maecenas eu nibh turpis. Mauris scelerisque condimentum lacinia. Nullam placerat tortor velit, eu suscipit sem rhoncus eu. Sed sodales malesuada pellentesque. Maecenas a sem eget eros sollicitudin pharetra id sit amet orci. Aenean non lacus mauris.
+                        </p>
                     </div>
                 </div>
             </div>
