Fixed the slider//Update the background img

--- a/about_us.html
+++ b/about_us.html
@@ -60,7 +60,7 @@
                     <p>
 
                     </p>
-                    <button onclick="window.location.href='index.html#legal-services-section'">See all services</button>
+                    <button onclick="window.location.href='index.html#legal-services-section'" id="on_click">See all services</button>
                 </div>
             </div>
         </section>
