--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             </picture>
             <div id="slider">
                 <img class="selected" src="img/law_office.jpg" alt="Picture of the law firm building" >
-                <img src="img/entrace.jpg" alt="Picture of the law firm waiting room">
-                <img src="img/meeting-room.jpg">
+                <img src="img/chairs.jpg" alt="Picture of the law firm waiting room">
+                <img src="img/meeting_room.jpg">
             </div>
 
             <div class="hero-content">
@@ -60,7 +60,7 @@
                     <p>
 
                     </p>
-                    <button onclick="window.location.href='index.html#legal-services-section'">See all services</button>
+                    <button onclick="window.location.href='index.html#legal-services-section'" >See all services</button>
                 </div>
             </div>
         </section>
