Add a functional link to href//Add noopener safety

--- a/about_us.html
+++ b/about_us.html
@@ -42,8 +42,8 @@
             </picture>
             <div id="slider">
                 <img class="selected" src="img/law_office.jpg" alt="Picture of the law firm building" >
-                <img src="img/entrace.jpg" alt="Picture of the law firm waiting room">
-                <img src="img/meeting-room.jpg">
+                <img src="img/chairs.jpg" alt="Picture of the law firm waiting room">
+                <img src="img/meeting_room.jpg">
             </div>
 
             <div class="hero-content">
@@ -136,11 +136,11 @@
                     </ul>
                     <ul>
                         <li class="list-title">Social Media</li>
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">LinkedIn</a></li>
-                        <li><a href="#">Instagram</a></li>
-                        <li><a href="#">Twitter</a></li>
-                        <li><a href="#">YouTube</a></li>
+                        <li><a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">Facebook</a></li>
+                        <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                        <li><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+                        <li><a href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer">Twitter</a></li>
+                        <li><a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">YouTube</a></li>
                     </ul>
                     <ul>
                         <li class="list-title">Customer Service</li>
