Container "about us" fixed

--- a/about_us.html
+++ b/about_us.html
@@ -105,7 +105,7 @@
                         />
                     </div>
                     <div class="first-office-info">
-                        <h2 class="title">Awards</h2>
+                        <h2 class="title" id="awards">Awards</h2>
                         <p class="info">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer hendrerit tellus in felis mollis, ut malesuada nisl sodales. Aenean ultrices neque sit amet risus venenatis, ac eleifend enim suscipit. Nulla eleifend sem vitae pulvinar commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec mattis aliquam libero quis congue. Mauris efficitur magna vel vulputate commodo. Aenean lacinia magna eros, pharetra viverra turpis blandit eu. Maecenas eu nibh turpis. Mauris scelerisque condimentum lacinia. Nullam placerat tortor velit, eu suscipit sem rhoncus eu. Sed sodales malesuada pellentesque. Maecenas a sem eget eros sollicitudin pharetra id sit amet orci. Aenean non lacus mauris.
                         </p>
@@ -129,10 +129,9 @@
                     <ul>
                         <li class="list-title">About Us</li>
                         <li><a href="about_us.html">Our Story</a></li>
+                        <li><a href="about_us.html#about-us-section">Awards</a></li>
                         <li><a href="#">Press</a></li>
                         <li><a href="#">Blog</a></li>
-                        <li><a href="#">Awards</a></li>
-                        <li><a href="#">Stores</a></li>
                     </ul>
                     <ul>
                         <li class="list-title">Social Media</li>
@@ -140,7 +139,6 @@
                         <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
                         <li><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
                         <li><a href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer">Twitter</a></li>
-                        <li><a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">YouTube</a></li>
                     </ul>
                     <ul>
                         <li class="list-title">Customer Service</li>
@@ -148,7 +146,6 @@
                         <li><a href="#">Contact Us</a></li>
                         <li><a href="#">Terms & Conditions</a></li>
                         <li><a href="#">Delivery & Returns</a></li>
-                        <li><a href="#">Finance</a></li>
                     </ul>
                 </div>
             </div>
