--- a/index.html
+++ b/index.html
@@ -167,26 +167,22 @@
                     <ul>
                         <li class="list-title">About Us</li>
                         <li><a href="about_us.html">Our Story</a></li>
+                        <li><a href="about_us.html#about-us-section">Awards</a></li>
                         <li><a href="#">Press</a></li>
                         <li><a href="#">Blog</a></li>
-                        <li><a href="#">Awards</a></li>
-                        <li><a href="#">Stores</a></li>
                     </ul>
                     <ul>
                         <li class="list-title">Social Media</li>
                         <li><a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">Facebook</a></li>
                         <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
                         <li><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-                        <li><a href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer">Twitter</a></li>
-                        <li><a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">YouTube</a></li>
-                    </ul>
+                        <li><a href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer">Twitter</a></li>                    </ul>
                     <ul>
                         <li class="list-title">Customer Service</li>
                         <li><a href="#">Live Chat</a></li>
                         <li><a href="#">Contact Us</a></li>
                         <li><a href="#">Terms & Conditions</a></li>
                         <li><a href="#">Delivery & Returns</a></li>
-                        <li><a href="#">Finance</a></li>
                     </ul>
                 </div>
             </div>
