Copyright year dinamic

--- a/index.html
+++ b/index.html
@@ -237,7 +237,10 @@
                     </ul>
                 </div>
             </div>
-            <div class="copyright-text">2022 &copy; All Rights Reserved</div>
+            <div class="copyright-text">
+                <span id="current_year"></span> &nbsp; &copy; All Rights Reserved
+            
+            </div>
         </footer>
         <script src="sweetalert2.all.min.js"></script>
         <script src="scripts.js"></script>
