Hero section more clear

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <body>
         <header>
-            <div class="container">
+            <div class="container-head">
                 <section class="logo">
                     <a href="index.html">
                         <strong>TrustWood</strong>
@@ -24,7 +24,7 @@
                         <span>Quebec</span>
                     </a>
                 </section>
-                <nav>
+                <nav class="menu-nav">
                     <ul>
                         <li><a href="index.html#about-us-section">About us</a></li>
                         <li><a href="index.html#legal-services-section">Services</a></li>
@@ -41,21 +41,21 @@
                 <source media="(max-width: 960px)" srcset="img/law_office.jpg"> 
                 <source media="(max-width: 1440px)" srcset="img/law_office.jpg"> 
             </picture>
-            <div id="slider">
+            <div class="slider">
                 <img class="selected" src="img/law_office.jpg" alt="Picture of the law firm building" >
                 <img src="img/chairs.jpg" alt="Picture of the law firm waiting room">
                 <img src="img/meeting_room.jpg">
             </div>
 
             <div class="hero-content">
-                <div class="container">
+                <div class="container-hero">
                     <h1>
                         Voted Best </br>Law Firm of 2020
                         <p>
                             &#9864 By The Canadian Legal Lexpert Directory
                         </p>
                     </h1>
-                    <p>
+                    <p class="hero-p">
                         Opened in 2021 in Quebec City, it brings to the city one of the three largest law conglomerates in Canada.
                     </p>
                     <p>
