Css container edit

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         </section>
 
         <section class="about-us" id="about-us-section">
-            <h2>About Us</h2>
+            <h2 class="about-title">About Us</h2>
             <hr />
             <div class="about-us-part">
-                <div class="container">
+                <div class="container-about">
                     <div class="first-office-img">
                         <img
                             src="img/about_us_first.jpg"
@@ -78,13 +78,13 @@
                         />
                     </div>
                     <div class="first-office-info">
-                        <h2 class="title">First Office</h2>
+                        <h2 class="title-info">First Office</h2>
                         <p class="info">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer hendrerit tellus in felis mollis, ut malesuada nisl sodales. Aenean ultrices neque sit amet risus venenatis, ac eleifend enim suscipit. Nulla eleifend sem vitae pulvinar commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec mattis aliquam libero quis congue. Mauris efficitur magna vel vulputate commodo. Aenean lacinia magna eros, pharetra viverra turpis blandit eu. Maecenas eu nibh turpis. Mauris scelerisque condimentum lacinia. Nullam placerat tortor velit, eu suscipit sem rhoncus eu. Sed sodales malesuada pellentesque. Maecenas a sem eget eros sollicitudin pharetra id sit amet orci. Aenean non lacus mauris.
                         </p>
                     </div>
                 </div>
-                <div class="container">
+                <div class="container-about">
                     <div class="montreal-info">
                         <h2 class="title">Montreal</h2>
                         <p class="info">
@@ -98,7 +98,7 @@
                         />
                     </div>
                 </div>
-                <div class="container">
+                <div class="container-about">
                     <div class="first-office-img">
                         <img
                             src="img/about_us_awards.jpg"
@@ -106,7 +106,7 @@
                         />
                     </div>
                     <div class="first-office-info">
-                        <h2 class="title" id="awards">Awards</h2>
+                        <h2 class="title-info">Awards</h2>
                         <p class="info">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer hendrerit tellus in felis mollis, ut malesuada nisl sodales. Aenean ultrices neque sit amet risus venenatis, ac eleifend enim suscipit. Nulla eleifend sem vitae pulvinar commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec mattis aliquam libero quis congue. Mauris efficitur magna vel vulputate commodo. Aenean lacinia magna eros, pharetra viverra turpis blandit eu. Maecenas eu nibh turpis. Mauris scelerisque condimentum lacinia. Nullam placerat tortor velit, eu suscipit sem rhoncus eu. Sed sodales malesuada pellentesque. Maecenas a sem eget eros sollicitudin pharetra id sit amet orci. Aenean non lacus mauris.
                         </p>
@@ -119,7 +119,7 @@
             <h2>Services</h2>
             <hr />
             <div class="services-slider">
-                <div class="container">
+                <div class="container-slider">
                     <div class="service">
                         <div class="service-picture">
                             <img
@@ -168,7 +168,7 @@
                 </div>
             </div>
             <div class="services-slider">
-                <div class="container">
+                <div class="container-slider">
                     <div class="service">
                         <div class="service-picture">
                             <img
@@ -214,7 +214,7 @@
 
         <footer>
             <div class="bottom-nav">
-                <div class="container">
+                <div class="container-nav">
                     <ul>
                         <li class="list-title">About Us</li>
                         <li><a href="index.html#about-us-section">Our Story</a></li>
