--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <section class="logo">
                     <a href="index.html">
                         <strong>TrustWood</strong>
-                        <span class="blue-dot"></span>
+                        <span class="brown-dot"></span>
                         <span>Quebec</span>
                     </a>
                 </section>
@@ -29,7 +29,7 @@
                         <li><a href="index.html#about-us-section">About us</a></li>
                         <li><a href="index.html#legal-services-section">Services</a></li>
                         <li><a href="index.html#newsletter-section">Contact</a></li>
-                        <li class="menu-icon"><img src="img/menu_icon.png" alt="menu icon"></li>
+                       <!--  <li class="menu-icon"><img src="img/menu_icon.png" alt="menu icon"></li> -->
                     </ul>
                 </nav>
             </div>
@@ -79,15 +79,15 @@
                     </div>
                     <div class="first-office-info">
                         <h2 class="title-info">First Office</h2>
-                        <p class="info">
+                        <p class="info-about">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer hendrerit tellus in felis mollis, ut malesuada nisl sodales. Aenean ultrices neque sit amet risus venenatis, ac eleifend enim suscipit. Nulla eleifend sem vitae pulvinar commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec mattis aliquam libero quis congue. Mauris efficitur magna vel vulputate commodo. Aenean lacinia magna eros, pharetra viverra turpis blandit eu. Maecenas eu nibh turpis. Mauris scelerisque condimentum lacinia. Nullam placerat tortor velit, eu suscipit sem rhoncus eu. Sed sodales malesuada pellentesque. Maecenas a sem eget eros sollicitudin pharetra id sit amet orci. Aenean non lacus mauris.
                         </p>
                     </div>
                 </div>
                 <div class="container-about">
                     <div class="montreal-info">
-                        <h2 class="title">Montreal</h2>
-                        <p class="info">
+                        <h2 class="title-info">Montreal</h2>
+                        <p class="info-about">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer hendrerit tellus in felis mollis, ut malesuada nisl sodales. Aenean ultrices neque sit amet risus venenatis, ac eleifend enim suscipit. Nulla eleifend sem vitae pulvinar commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec mattis aliquam libero quis congue. Mauris efficitur magna vel vulputate commodo. Aenean lacinia magna eros, pharetra viverra turpis blandit eu. Maecenas eu nibh turpis. Mauris scelerisque condimentum lacinia. Nullam placerat tortor velit, eu suscipit sem rhoncus eu. Sed sodales malesuada pellentesque. Maecenas a sem eget eros sollicitudin pharetra id sit amet orci. Aenean non lacus mauris.
                         </p>
                     </div>
@@ -107,7 +107,7 @@
                     </div>
                     <div class="first-office-info">
                         <h2 class="title-info">Awards</h2>
-                        <p class="info">
+                        <p class="info-about">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer hendrerit tellus in felis mollis, ut malesuada nisl sodales. Aenean ultrices neque sit amet risus venenatis, ac eleifend enim suscipit. Nulla eleifend sem vitae pulvinar commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec mattis aliquam libero quis congue. Mauris efficitur magna vel vulputate commodo. Aenean lacinia magna eros, pharetra viverra turpis blandit eu. Maecenas eu nibh turpis. Mauris scelerisque condimentum lacinia. Nullam placerat tortor velit, eu suscipit sem rhoncus eu. Sed sodales malesuada pellentesque. Maecenas a sem eget eros sollicitudin pharetra id sit amet orci. Aenean non lacus mauris.
                         </p>
                     </div>
