--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
         <title>TrustWood - Quebec</title>
         <link
             href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;700&display=swap"
@@ -20,8 +23,10 @@
                 <section class="logo">
                     <a href="index.html">
                         <strong>TrustWood</strong>
-                        <span class="brown-dot"></span>
+                        <!-- <span class="brown-dot"></span> -->
+                        <img src="img/logo-13.svg" alt="Logo" class="logo-img">
                         <span>Quebec</span>
+                        
                     </a>
                 </section>
                 <nav class="menu-nav">
