--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
         <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
         <title>TrustWood - Quebec</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;700&display=swap"
-            rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+        rel="stylesheet"
         />
         <link rel="stylesheet" href="css/style.css" />
         <!-- <link rel="stylesheet" href="sweetalert2.min.css"> -->
@@ -55,7 +57,7 @@
             <div class="hero-content">
                 <div class="container-hero">
                     <h1>
-                        Voted Best </br>Law Firm of 2020
+                        Voted Best</br>Law Firm of 2022
                         <p>
                             &#9864 By The Canadian Legal Lexpert Directory
                         </p>
