Legal services makeover

--- a/index.html
+++ b/index.html
@@ -43,11 +43,6 @@
         </header>
 
         <section class="hero">
-            <picture>
-                <source media="(max-width: 576px)" srcset="img/law_office.jpg"> 
-                <source media="(max-width: 960px)" srcset="img/law_office.jpg"> 
-                <source media="(max-width: 1440px)" srcset="img/law_office.jpg"> 
-            </picture>
             <div class="slider">
                 <img class="selected" src="img/law_office.jpg" alt="Picture of the law firm building" >
                 <img src="img/chairs.jpg" alt="Picture of the law firm waiting room">
@@ -122,91 +117,71 @@
             </div>
         </section>
 
-        <section class="legal-services" id="legal-services-section">
-            <h2>Services</h2>
+        <section class="legal-services">
+            <h2 class="legal-services-h2">Legal Services</h2>
             <hr />
-            <div class="services-slider">
-                <div class="container-slider">
-                    <div class="service">
-                        <div class="service-picture">
-                            <img
-                                src="img/bail.png"
-                                alt="Icon of handcuffs"
-                            />
-                            <!-- https://iconscout.com/icon/arrest-crime-handcuffs-fetter-police-law-breaking-8 --> 
-                        </div>
-                        <div class="service-info">
-                            <h2 class="title">Bail</h2>
+            <div class="container-service">
+                    <div>
+                           <svg xmlns="http://www.w3.org/2000/svg" class="service-picture" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
+                           </svg>
+                           <div class="service-info">
+                            <h2 class="title"><strong>International Law</strong></h2>
                             <p class="info">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec nisl consectetur, tempus ex sed, lacinia tellus.
                             </p>
                         </div>
                     </div>
 
-                    <div class="service">
-                        <div class="service-picture">
-                            <img
-                                src="img/immigration.png"
-                                alt="Icon of a document"
-                            />
-                        </div>
+                    <div>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="service-picture" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 6l3 1m0 0l-3 9a5.002 5.002 0 006.001 0M6 7l3 9M6 7l6-2m6 2l3-1m-3 1l-3 9a5.002 5.002 0 006.001 0M18 7l3 9m-3-9l-6-2m0-2v2m0 16V5m0 16H9m3 0h3" />
+                          </svg>
                         <div class="service-info">
-                            <h2 class="title">Immigration</h2>
+                            <h2 class="title"><strong>Immigration</strong></h2>
                             <p class="info">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec nisl consectetur, tempus ex sed, lacinia tellus.
                             </p>
                         </div>
                     </div>
 
-                    <div class="service">
-                        <div class="service-picture">
-                            <img
-                                src="img/insurance.png"
-                                alt="Icon of a shield"
-                            />
-                        </div>
+                    <div>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="service-picture" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
+                          </svg>
                         <div class="service-info">
-                            <h2 class="title-long">Insurance</h2>
+                            <h2 class="title"><strong>Insurance</strong></h2>
                             <p class="info">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec nisl consectetur, tempus ex sed, lacinia tellus.
                             </p>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="services-slider">
-                <div class="container-slider">
-                    <div class="service">
-                        <div class="service-picture">
-                            <img
-                                src="img/partnership.png"
-                                alt="Icon of two hands shaking in agreement"
-                            />
-                        </div>
+                <div class="container-service-2">
+                    <div>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="service-picture" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                          </svg>
                         <div class="service-info">
-                            <h2 class="title-long">Mergers and Acquisitions</h2>
+                            <h2 class="title"><strong>Mergers and Acquisitions</strong></h2>
                             <p class="info">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec nisl consectetur, tempus ex sed, lacinia tellus.
                             </p>
                         </div>
                     </div>
 
-                    <div class="service">
-                        <div class="service-picture">
-                            <img
-                                src="img/intellectual.png"
-                                alt="Icon of two hands shaking in agreement"
-                            />
-                        </div>
+                    <div>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="service-picture" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 11c0 3.517-1.009 6.799-2.753 9.571m-3.44-2.04l.054-.09A13.916 13.916 0 008 11a4 4 0 118 0c0 1.017-.07 2.019-.203 3m-2.118 6.844A21.88 21.88 0 0015.171 17m3.839 1.132c.645-2.266.99-4.659.99-7.132A8 8 0 008 4.07M3 15.364c.64-1.319 1-2.8 1-4.364 0-1.457.39-2.823 1.07-4" />
+                          </svg>
                         <div class="service-info">
-                            <h2 class="title-long">Intellectual Property</h2>
+                            <h2 class="title"><strong>Intellectual Property</strong></h2>
                             <p class="info">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec nisl consectetur, tempus ex sed, lacinia tellus.
                             </p>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
 
         <section class="newsletter" id="newsletter-section">
