--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         rel="stylesheet"
         />
         <link rel="stylesheet" href="css/style.css" />
-        <!-- <link rel="stylesheet" href="sweetalert2.min.css"> -->
     </head>
 
     <body>
@@ -25,7 +24,6 @@
                 <section class="logo">
                     <a href="index.html">
                         <strong>TrustWood</strong>
-                        <!-- <span class="brown-dot"></span> -->
                         <img src="img/logo-13.svg" alt="Logo" class="logo-img">
                         <span>Quebec</span>
                         
@@ -46,7 +44,7 @@
             <div class="slider">
                 <img class="selected" src="img/law_office.jpg" alt="Picture of the law firm building" >
                 <img src="img/chairs.jpg" alt="Picture of the law firm waiting room">
-                <img src="img/meeting_room.jpg">
+                <img src="img/meeting_room.jpg"> <!-- ESCOLHER FOTO MELHOR -->
             </div>
 
             <div class="hero-content">
@@ -60,9 +58,7 @@
                     <p class="hero-p">
                         Opened in 2021 in Quebec City, it brings to the city one of the three largest law conglomerates in Canada.
                     </p>
-                    <p>
-
-                    </p>
+                    
                     <button onclick="window.location.href='index.html#legal-services-section'" >See all services</button>
                 </div>
             </div>
@@ -73,13 +69,13 @@
             <hr />
             <div class="about-us-part">
                 <div class="container-about">
-                    <div class="first-office-img">
+                    <div>
                         <img
                             src="img/about_us_first.jpg"
                             alt="Picture of the Toronto's city"
                         />
                     </div>
-                    <div class="first-office-info">
+                    <div class="left-side-info">
                         <h2 class="title-info">First Office</h2>
                         <p class="info-about">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer hendrerit tellus in felis mollis, ut malesuada nisl sodales. Aenean ultrices neque sit amet risus venenatis, ac eleifend enim suscipit. Nulla eleifend sem vitae pulvinar commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec mattis aliquam libero quis congue. Mauris efficitur magna vel vulputate commodo. Aenean lacinia magna eros, pharetra viverra turpis blandit eu. Maecenas eu nibh turpis. Mauris scelerisque condimentum lacinia. Nullam placerat tortor velit, eu suscipit sem rhoncus eu. Sed sodales malesuada pellentesque. Maecenas a sem eget eros sollicitudin pharetra id sit amet orci. Aenean non lacus mauris.
@@ -101,13 +97,13 @@
                     </div>
                 </div>
                 <div class="container-about">
-                    <div class="first-office-img">
+                    <div>
                         <img
                             src="img/about_us_awards.jpg"
                             alt="Picture of the Toronto's city"
                         />
                     </div>
-                    <div class="first-office-info">
+                    <div class="left-side-info">
                         <h2 class="title-info">Awards</h2>
                         <p class="info-about">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer hendrerit tellus in felis mollis, ut malesuada nisl sodales. Aenean ultrices neque sit amet risus venenatis, ac eleifend enim suscipit. Nulla eleifend sem vitae pulvinar commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec mattis aliquam libero quis congue. Mauris efficitur magna vel vulputate commodo. Aenean lacinia magna eros, pharetra viverra turpis blandit eu. Maecenas eu nibh turpis. Mauris scelerisque condimentum lacinia. Nullam placerat tortor velit, eu suscipit sem rhoncus eu. Sed sodales malesuada pellentesque. Maecenas a sem eget eros sollicitudin pharetra id sit amet orci. Aenean non lacus mauris.
@@ -117,7 +113,7 @@
             </div>
         </section>
 
-        <section class="legal-services">
+        <section class="legal-services" id="legal-services-section">
             <h2 class="legal-services-h2">Legal Services</h2>
             <hr />
             <div class="container-service">
