--- a/index.html
+++ b/index.html
@@ -50,18 +50,28 @@
             <div class="hero-content">
                 <div class="container-hero">
                     <h1>
-                        Voted Best</br>Law Firm of 2022
+                        Voted Best</br>Law Firm of 2021
                         <p>
                             &#9864 By The Canadian Legal Lexpert Directory
                         </p>
                     </h1>
                     <p class="hero-p">
-                        Opened in 2021 in Quebec City, it brings to the city one of the three largest law conglomerates in Canada.
+                        Opened in 2020 in Quebec City, it brings to the city one of the three largest law conglomerates in Canada.
                     </p>
                     
                     <button onclick="window.location.href='index.html#legal-services-section'" >See all services</button>
                 </div>
             </div>
+        </section>
+        <section class="reviews">
+                <h4 class="h4--1">The most promising law firm has arrived in Quebec!</h4>
+                <img src="img/canadian_lawyer_logo.svg" alt="Canadian Lawyer Logo" class="magazine-logo logo--1">
+
+                <h4 class="h4--3">A team with a lot of diversity and awarded all over the world</h4>
+                <img src="img/law_times_logo.svg" alt="Canadian Lawyer Logo" class="magazine-logo logo--3">
+           
+                <h4 class="h4--2">The most international and modern office in Canada this year</h4>
+                <img src="img/lexpert_logo.svg" alt="Canadian Lawyer Logo" class="magazine-logo">
         </section>
 
         <section class="about-us" id="about-us-section">
